# mcp-ssh-tmux

./: .gitignore  AGENTS.md  Justfile  README.md  SPEC.md  pyproject.toml
.github/workflows/: release.yml
mcp_ssh_tmux/: server.py  session_manager.py  validation.py
tests/: test_live_ssh.py  test_session_manager.py  test_validation.py
