[project]
name = "mcp-ssh-tmux"
version = "0.1.0"
description = "MCP server for persistent SSH sessions via local tmux"
dependencies = [
    "fastmcp",
    "libtmux",
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
mcp-ssh-tmux = "mcp_ssh_tmux.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
