[project]
name = "mcp-ssh-tmux"
version = "0.1.0"
description = "MCP server for persistent SSH sessions via local tmux"
readme = "README.md"
authors = [
    { name = "Jon Rogers", email = "67245+devnullvoid@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "ssh", "tmux", "terminal", "persistence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp",
    "libtmux",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/devnullvoid/mcp-ssh-tmux"
Repository = "https://github.com/devnullvoid/mcp-ssh-tmux"
Issues = "https://github.com/devnullvoid/mcp-ssh-tmux/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
mcp-ssh-tmux = "mcp_ssh_tmux.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
